--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+.idea
 # Local .terraform directories
 **/.terraform/*
+**/.terraform.lock.hcl
+**/.terragrunt-cache
 
 # .tfstate files
 *.tfstate
@@ -27,3 +30,6 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+
+# Temporary folders
+tmp/
